[gd_scene format=3 uid="uid://c1ksiui82njv7"]

[ext_resource type="PackedScene" uid="uid://qfs4jn26m7or" path="res://scenes/base_panel.tscn" id="1_fxqo0"]
[ext_resource type="Script" uid="uid://b2gex0csk8ai4" path="res://scripts/select_difficulty_panel.gd" id="2_yy7nn"]
[ext_resource type="Texture2D" uid="uid://cfeo4w3wjp50c" path="res://assets/easy_btns.png" id="3_tswh5"]
[ext_resource type="Script" uid="uid://dpvketnnas4bp" path="res://scripts/animated_button.gd" id="4_oxrni"]
[ext_resource type="Texture2D" uid="uid://b6sl016bmqk07" path="res://assets/medium_btns.png" id="5_oxrni"]
[ext_resource type="Texture2D" uid="uid://bjru0vfxijabb" path="res://assets/hard_btns.png" id="8_u5yhy"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8lhpn"]
color = Color(1, 0.8627451, 0.84313726, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5b2m"]
atlas = ExtResource("3_tswh5")
region = Rect2(4, 1, 57, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxqo0"]
atlas = ExtResource("3_tswh5")
region = Rect2(131, 2, 59, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy7nn"]
atlas = ExtResource("3_tswh5")
region = Rect2(67, 1, 59, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_72hnm"]
atlas = ExtResource("5_oxrni")
region = Rect2(4, 1, 57, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_tswh5"]
atlas = ExtResource("5_oxrni")
region = Rect2(131, 2, 59, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5yhy"]
atlas = ExtResource("5_oxrni")
region = Rect2(67, 1, 59, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_208yv"]
atlas = ExtResource("8_u5yhy")
region = Rect2(4, 1, 57, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp3gc"]
atlas = ExtResource("8_u5yhy")
region = Rect2(131, 2, 59, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3gq3"]
atlas = ExtResource("8_u5yhy")
region = Rect2(67, 1, 59, 24)

[node name="SelectDifficultyPanel" unique_id=1619400180 instance=ExtResource("1_fxqo0")]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 4
script = ExtResource("2_yy7nn")

[node name="PanelContainer" parent="." index="3" unique_id=536803732]
offset_left = -89.0
offset_top = -78.25
offset_right = 89.0
offset_bottom = 78.25

[node name="VBoxContainer" parent="PanelContainer" index="0" unique_id=486121291]
theme_override_constants/separation = 5

[node name="NameLabel" parent="PanelContainer/VBoxContainer" index="0" unique_id=719207855]
size_flags_vertical = 3
size_flags_stretch_ratio = 6.89
text = "Select Difficulty"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer" index="1" unique_id=650181425]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_8lhpn")

[node name="Easy" type="TextureButton" parent="PanelContainer/VBoxContainer" index="2" unique_id=1826311375]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_m5b2m")
texture_pressed = SubResource("AtlasTexture_fxqo0")
texture_hover = SubResource("AtlasTexture_yy7nn")
stretch_mode = 3
script = ExtResource("4_oxrni")
metadata/_custom_type_script = "uid://dpvketnnas4bp"

[node name="Medium" type="TextureButton" parent="PanelContainer/VBoxContainer" index="3" unique_id=1735533744]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_72hnm")
texture_pressed = SubResource("AtlasTexture_tswh5")
texture_hover = SubResource("AtlasTexture_u5yhy")
stretch_mode = 3
script = ExtResource("4_oxrni")
metadata/_custom_type_script = "uid://dpvketnnas4bp"

[node name="Hard" type="TextureButton" parent="PanelContainer/VBoxContainer" index="4" unique_id=1748975190]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = SubResource("AtlasTexture_208yv")
texture_pressed = SubResource("AtlasTexture_yp3gc")
texture_hover = SubResource("AtlasTexture_c3gq3")
stretch_mode = 3
script = ExtResource("4_oxrni")
metadata/_custom_type_script = "uid://dpvketnnas4bp"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
